--- a/index.html
+++ b/index.html
@@ -1,70 +1,64 @@
 <style>
-    /* 1. الأجنحة: سد وفتح حقيقي (انزلاق كامل) */
-    .wing-panel {
-        position: fixed; top: 90px; width: 240px; height: 65%;
-        background: rgba(0,0,0,0.9); border: 3px solid gold;
-        border-radius: 20px; transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        z-index: 5000; box-shadow: 0 0 25px purple;
+    /* 1. إعادة ألوان قوس قزح والنيون */
+    :root {
+        --rainbow: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
+        --neon-gold: 0 0 15px #ffd700, 0 0 25px #ffd700;
     }
-    #users-wing { right: 10px; } 
-    #settings-wing { left: 10px; }
-    .wing-closed-right { transform: translateX(270px); opacity: 0; } /* سد الجناح اليمين */
-    .wing-closed-left { transform: translateX(-270px); opacity: 0; } /* سد الجناح اليسار */
 
-    /* 2. بحر الآلاف المؤلفة (انفجار الرموز والزخارف) */
-    #mega-ocean {
-        position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0);
-        width: 85%; height: 65%; background: #000; border: 4px double gold;
-        z-index: 10000; display: grid; grid-template-columns: repeat(auto-fill, minmax(45px, 1fr));
-        overflow-y: scroll; padding: 25px; transition: 0.4s; border-radius: 30px;
-        box-shadow: 0 0 100px red;
+    /* 2. جعل ساحة الشات هي المركز (الكتابة في الشاشة) */
+    #chat-screen {
+        position: fixed; top: 100px; bottom: 100px; left: 20px; right: 20px;
+        overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px;
+        transition: 0.5s; z-index: 100;
     }
-    .ocean-open { transform: translate(-50%, -50%) scale(1) !important; }
-    .item-art { font-size: 32px; cursor: pointer; padding: 8px; text-align: center; color: white; transition: 0.2s; }
-    .item-art:hover { transform: scale(1.4); color: gold; }
 
-    /* 3. زر الإرسال المقلوب المصحح */
-    .send-royal {
-        background: red !important; color: white !important;
-        border: 2px solid gold !important; border-radius: 50px;
-        padding: 10px 35px; cursor: pointer; font-weight: bold;
+    /* 3. زخرفة الرسائل بالألوان والبساط الأحمر */
+    .royal-msg {
+        background: linear-gradient(90deg, transparent, rgba(139, 0, 0, 0.8), transparent);
+        border: 1px solid gold; border-radius: 15px; padding: 15px;
+        animation: rainbow-glow 3s linear infinite; position: relative;
+    }
+    @keyframes rainbow-glow {
+        0% { box-shadow: 0 0 10px red; } 50% { box-shadow: 0 0 20px blue; } 100% { box-shadow: 0 0 10px red; }
+    }
+
+    /* 4. الاسم المشع للملك علوش */
+    .king-name {
+        font-weight: bold; font-size: 20px; text-shadow: var(--neon-gold);
+        background: var(--rainbow); -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+        background-size: 400%; animation: move-bg 5s linear infinite;
+    }
+    @keyframes move-bg { 0% { background-position: 0%; } 100% { background-position: 100%; } }
+
+    /* 5. شريط الإرسال الملون (تصحيح الصور) */
+    .input-zone {
+        position: fixed; bottom: 20px; width: 90%; left: 5%;
+        display: flex; flex-direction: row-reverse; gap: 10px;
+        background: rgba(0,0,0,0.9); border: 2px solid gold; border-radius: 50px; padding: 10px;
     }
 </style>
 
-<button onclick="document.getElementById('users-wing').classList.toggle('wing-closed-right')" style="position:fixed; top:20px; right:20px; z-index:6000; background:gold; border-radius:10px; padding:10px; cursor:pointer;">𓆩 فتح/سد الرعية 𓆪</button>
-<button onclick="document.getElementById('settings-wing').classList.toggle('wing-closed-left')" style="position:fixed; top:20px; left:20px; z-index:6000; background:gold; border-radius:10px; padding:10px; cursor:pointer;">𓆩 فتح/سد الإعدادات 𓆪</button>
-
-<div id="users-wing" class="wing-panel">
-    <div style="color:gold; text-align:center; padding:15px; border-bottom:1px solid gold; font-weight:bold;">
-        👥 الرعية: <span id="online-count">0</span>
+<div id="chat-screen">
     </div>
-    <div id="user-list"></div>
-</div>
 
-<div id="settings-wing" class="wing-panel">
-    <div style="color:gold; text-align:center; padding:15px; border-bottom:1px solid gold;">⚙️ نظام القصر</div>
-    <button style="width:90%; margin:10px 5%; padding:10px; background:white; color:black; font-weight:bold; border-radius:10px;">نظام الحماية الملكي 🛡️</button>
-</div>
-
-<div id="mega-ocean"></div>
-
-<div style="position:fixed; bottom:20px; width:100%; display:flex; flex-direction:row-reverse; justify-content:center; gap:15px; z-index:6000; background:rgba(0,0,0,0.8); padding:10px;">
-    <button class="send-royal" onclick="alert('تم إرسال مرسوم مزخرف!')">إرسال ⟸</button>
-    <input type="text" id="king-inp" style="width:60%; border-radius:50px; padding:12px; text-align:right; border:1px solid gold; background:#111; color:white;" placeholder="ـﮩﮩ٨ﮩﮩ👑 مرسوم الملك علوش 👑ﮩﮩ٨ﮩﮩـ">
-    <button onclick="document.getElementById('mega-ocean').classList.toggle('ocean-open')" style="font-size:35px; background:none; border:none; cursor:pointer;">😊</button>
+<div class="input-zone">
+    <button onclick="sendToScreen()" style="background:red; color:white; border:1px solid gold; border-radius:30px; padding:10px 30px; cursor:pointer; font-weight:bold;">إرسال ⟸</button>
+    <input type="text" id="screen-inp" style="flex:1; background:none; border:none; color:white; text-align:right;" placeholder="أمر الملك علوش...">
+    <button onclick="document.getElementById('mega-ocean').classList.toggle('ocean-open')" style="font-size:30px; background:none; border:none; cursor:pointer;">😊</button>
 </div>
 
 <script>
-    // 1. توليد "الآلاف المؤلفة" من الرموز والزخارف (شلع قلع)
-    const ocean = document.getElementById('mega-ocean');
-    let data = "";
-    // إضافة آلاف الإيموجيات
-    for(let i=0x1F600; i<0x1F64F; i++) data += `<div class="item-art" onclick="add('${String.fromCodePoint(i)}')">${String.fromCodePoint(i)}</div>`;
-    for(let i=0x1F300; i<0x1F5FF; i++) data += `<div class="item-art" onclick="add('${String.fromCodePoint(i)}')">${String.fromCodePoint(i)}</div>`;
-    // إضافة الزخارف واللاوات الحصرية
-    const royal = ["𓆩", "𓆪", "卍", "亗", "꧁", "꧂", "🔥", "💎", "⚔️", "👑", "🧿"];
-    royal.forEach(r => data += `<div class="item-art" onclick="add('${r}')" style="color:gold;">${r}</div>`);
-    ocean.innerHTML = data;
-
-    function add(v) { document.getElementById('king-inp').value += v; }
+    function sendToScreen() {
+        const inp = document.getElementById('screen-inp');
+        const screen = document.getElementById('chat-screen');
+        if(inp.value.trim()) {
+            const div = document.createElement('div');
+            div.className = 'royal-msg';
+            div.innerHTML = `<span class="king-name">𓆩 👑 علوش 𓆪:</span> <span style="color:white; font-size:18px;">꧁ ${inp.value} ꧂</span>`;
+            screen.appendChild(div);
+            screen.scrollTop = screen.scrollHeight;
+            inp.value = "";
+            // تأثير البرق عند الكتابة في الشاشة
+        }
+    }
 </script>
