--- a/index.html
+++ b/index.html
@@ -1,64 +1,65 @@
 <style>
-    /* 1. إعادة ألوان قوس قزح والنيون */
-    :root {
-        --rainbow: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
-        --neon-gold: 0 0 15px #ffd700, 0 0 25px #ffd700;
+    /* 1. تصميم جناح الإعدادات ليحتوي الملايين */
+    #settings-wing {
+        position: fixed; top: 80px; left: 15px; width: 280px; height: 75%;
+        background: rgba(0,0,0,0.98); border: 3px solid gold;
+        border-radius: 20px; overflow-y: auto; z-index: 5000;
+        box-shadow: 0 0 30px purple; padding: 10px;
     }
 
-    /* 2. جعل ساحة الشات هي المركز (الكتابة في الشاشة) */
-    #chat-screen {
-        position: fixed; top: 100px; bottom: 100px; left: 20px; right: 20px;
-        overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px;
-        transition: 0.5s; z-index: 100;
+    /* 2. حاوية الرموز داخل الإعدادات */
+    .millions-container {
+        display: grid; grid-template-columns: repeat(4, 1fr);
+        gap: 5px; padding: 10px; background: #111;
+        border-radius: 10px; border: 1px solid #333;
     }
 
-    /* 3. زخرفة الرسائل بالألوان والبساط الأحمر */
-    .royal-msg {
-        background: linear-gradient(90deg, transparent, rgba(139, 0, 0, 0.8), transparent);
-        border: 1px solid gold; border-radius: 15px; padding: 15px;
-        animation: rainbow-glow 3s linear infinite; position: relative;
+    .mega-item {
+        font-size: 25px; cursor: pointer; text-align: center;
+        padding: 5px; transition: 0.2s;
     }
-    @keyframes rainbow-glow {
-        0% { box-shadow: 0 0 10px red; } 50% { box-shadow: 0 0 20px blue; } 100% { box-shadow: 0 0 10px red; }
-    }
+    .mega-item:hover { background: gold; color: black; border-radius: 5px; }
 
-    /* 4. الاسم المشع للملك علوش */
-    .king-name {
-        font-weight: bold; font-size: 20px; text-shadow: var(--neon-gold);
-        background: var(--rainbow); -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-        background-size: 400%; animation: move-bg 5s linear infinite;
-    }
-    @keyframes move-bg { 0% { background-position: 0%; } 100% { background-position: 100%; } }
-
-    /* 5. شريط الإرسال الملون (تصحيح الصور) */
-    .input-zone {
-        position: fixed; bottom: 20px; width: 90%; left: 5%;
-        display: flex; flex-direction: row-reverse; gap: 10px;
-        background: rgba(0,0,0,0.9); border: 2px solid gold; border-radius: 50px; padding: 10px;
+    .setting-title {
+        color: gold; text-align: center; font-weight: bold;
+        padding: 10px; border-bottom: 2px double gold; margin-bottom: 10px;
     }
 </style>
 
-<div id="chat-screen">
-    </div>
+<div id="settings-wing">
+    <div class="setting-title">⚙️ خزانة الملايين الملكية</div>
+    
+    <button style="width:100%; padding:12px; background:white; color:black; font-weight:bold; border-radius:10px; margin-bottom:15px;">
+        🛡️ نظام الحماية الملكي
+    </button>
 
-<div class="input-zone">
-    <button onclick="sendToScreen()" style="background:red; color:white; border:1px solid gold; border-radius:30px; padding:10px 30px; cursor:pointer; font-weight:bold;">إرسال ⟸</button>
-    <input type="text" id="screen-inp" style="flex:1; background:none; border:none; color:white; text-align:right;" placeholder="أمر الملك علوش...">
-    <button onclick="document.getElementById('mega-ocean').classList.toggle('ocean-open')" style="font-size:30px; background:none; border:none; cursor:pointer;">😊</button>
+    <div style="color:white; font-size:12px; margin-bottom:5px;">💎 رموز الملايين المضافة:</div>
+    <div id="millions-list" class="millions-container">
+        </div>
 </div>
 
 <script>
-    function sendToScreen() {
-        const inp = document.getElementById('screen-inp');
-        const screen = document.getElementById('chat-screen');
-        if(inp.value.trim()) {
-            const div = document.createElement('div');
-            div.className = 'royal-msg';
-            div.innerHTML = `<span class="king-name">𓆩 👑 علوش 𓆪:</span> <span style="color:white; font-size:18px;">꧁ ${inp.value} ꧂</span>`;
-            screen.appendChild(div);
-            screen.scrollTop = screen.scrollHeight;
-            inp.value = "";
-            // تأثير البرق عند الكتابة في الشاشة
-        }
+    // توليد ملايين الإضافات والرموز داخل الإعدادات فوراً
+    function loadMillions() {
+        const list = document.getElementById('millions-list');
+        let content = "";
+        
+        // إضافة آلاف الرموز المتنوعة (فيسات، زخارف، أشياء نادرة)
+        const ranges = [[0x1F600, 0x1F64F], [0x1F300, 0x1F5FF], [0x1F900, 0x1F9FF], [0x2600, 0x26FF]];
+        ranges.forEach(range => {
+            for(let i = range[0]; i <= range[1]; i++) {
+                content += `<div class="mega-item" onclick="document.getElementById('king-inp').value += '${String.fromCodePoint(i)}'">${String.fromCodePoint(i)}</div>`;
+            }
+        });
+
+        // إضافة اللاوات والزخارف الملكية الخاصة
+        const royalExtras = ["𓆩", "𓆪", "卍", "亗", "꧁", "꧂", "🔥", "💎", "⚔️", "👑", "🧿", "✨", "🪐"];
+        royalExtras.forEach(icon => {
+            content += `<div class="mega-item" onclick="document.getElementById('king-inp').value += '${icon}'" style="color:gold;">${icon}</div>`;
+        });
+
+        list.innerHTML = content;
     }
+
+    loadMillions(); // تشغيل التحميل عند فتح القصر
 </script>
