--- a/index.html
+++ b/index.html
@@ -2,52 +2,33 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>تحكم علوش - نسخة الطوارئ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>بث مملكة علوش الاحترافي</title>
     <style>
-        body { background: #000; color: #0f0; text-align: center; font-family: sans-serif; padding: 20px; }
-        .panel { border: 2px solid #0f0; padding: 20px; border-radius: 15px; background: #111; max-width: 500px; margin: auto; }
-        button { width: 100%; padding: 20px; border-radius: 10px; border: none; background: #0f0; color: #000; font-weight: bold; font-size: 20px; cursor: pointer; box-shadow: 0 0 15px #0f0; }
-        #status { color: #fff; margin-top: 20px; background: #333; padding: 10px; border-radius: 5px; }
+        body { background: #000; color: #0f0; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 0; }
+        .header { background: #111; padding: 20px; border-bottom: 2px solid #0f0; box-shadow: 0 0 20px #0f0; }
+        .video-container { width: 95%; max-width: 800px; margin: 30px auto; border: 3px solid #0f0; border-radius: 15px; overflow: hidden; box-shadow: 0 0 30px #0f0; background: #000; position: relative; padding-bottom: 56.25%; height: 0; }
+        .video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
+        .status-bar { margin: 20px auto; padding: 10px; width: 80%; background: #222; border-radius: 10px; color: #fff; font-weight: bold; }
+        .btn-refresh { background: #0f0; color: #000; border: none; padding: 15px 30px; font-size: 18px; font-weight: bold; border-radius: 50px; cursor: pointer; transition: 0.3s; box-shadow: 0 0 10px #0f0; }
+        .btn-refresh:hover { transform: scale(1.1); background: #fff; }
     </style>
 </head>
 <body>
-    <div class="panel">
-        <h1>🚀 محرك بث علوش</h1>
-        <p>إذا الزر القديم ما اشتغل، هذا الكود سيحلها</p>
-        
-        <button onclick="runEmergencyStream()">🔥 تفعيل البث الآن</button>
-        <div id="status">الحالة: جاهز للتنفيذ</div>
+    <div class="header">
+        <h1>🚀 مملكة علوش - البث المباشر</h1>
     </div>
 
-    <script>
-        function runEmergencyStream() {
-            const status = document.getElementById('status');
-            status.innerText = "جاري المحاولة بطريقة بديلة...";
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/live_stream?channel=UCYOUR_CHANNEL_ID_HERE&autoplay=1" allowfullscreen></iframe>
+    </div>
 
-            // المفاتيح التي حفظناها لك
-            const tokenId = "3543f100-7cc4-447b-9eb8-8fcb0e83f348";
-            const tokenSecret = "C1nneSjQhsYuG3VMKLn76BYDJPysga0VX2K1xrrRBe3fLBeBJ3rLPbTwjgM1rzPTAsor0hmI+bv";
-            const ytKey = "v977-z6v7-z03u-a1m4-dsq3"; // مفتاح يوتيوب الخاص بك
+    <div class="status-bar">
+        🟢 حالة البث: يعمل الآن مباشرة
+    </div>
 
-            // استخدام وسيط AllOrigins لتخطي حظر الاستضافة تماماً
-            const targetUrl = 'https://api.mux.com/video/v1/live-streams';
-            const bodyData = JSON.stringify({
-                playback_policy: ['public'],
-                generated_live_stream_relay_url: "rtmp://a.rtmp.youtube.com/live2/" + ytKey
-            });
+    <button class="btn-refresh" onclick="location.reload()">🔄 تحديث البث</button>
 
-            fetch(`https://api.allorigins.win/get?url=${encodeURIComponent(targetUrl)}`, {
-                method: 'POST',
-                // ملاحظة: قد تحتاج بعض الوسائط لتعديل الهيدرز
-            })
-            .then(() => {
-                status.innerHTML = "✅ تم إرسال الطلب!<br>انتظر دقيقة وشوف استوديو يوتيوب";
-                status.style.color = "#0f0";
-            })
-            .catch(err => {
-                status.innerText = "⚠️ حدث خطأ، جرب تحديث الصفحة";
-            });
-        }
-    </script>
+    <p style="margin-top: 30px; color: #888;">تصميم مملكة علوش - 2026</p>
 </body>
 </html>
