--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>بث مملكة علوش الاحترافي</title>
     <style>
-        body { background: #000; color: #0f0; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 0; }
+        body { background: #000; color: #0f0; text-align: center; font-family: sans-serif; margin: 0; padding: 0; }
         .header { background: #111; padding: 20px; border-bottom: 2px solid #0f0; box-shadow: 0 0 20px #0f0; }
         .video-container { width: 95%; max-width: 800px; margin: 30px auto; border: 3px solid #0f0; border-radius: 15px; overflow: hidden; box-shadow: 0 0 30px #0f0; background: #000; position: relative; padding-bottom: 56.25%; height: 0; }
         .video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
         .status-bar { margin: 20px auto; padding: 10px; width: 80%; background: #222; border-radius: 10px; color: #fff; font-weight: bold; }
         .btn-refresh { background: #0f0; color: #000; border: none; padding: 15px 30px; font-size: 18px; font-weight: bold; border-radius: 50px; cursor: pointer; transition: 0.3s; box-shadow: 0 0 10px #0f0; }
-        .btn-refresh:hover { transform: scale(1.1); background: #fff; }
     </style>
 </head>
 <body>
@@ -20,15 +19,15 @@
     </div>
 
     <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/live_stream?channel=UCYOUR_CHANNEL_ID_HERE&autoplay=1" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/live_stream?channel=UCp7XvUq8J7p7-8vY6S9S-qQ&autoplay=1" allowfullscreen></iframe>
     </div>
 
     <div class="status-bar">
-        🟢 حالة البث: يعمل الآن مباشرة
+        🟢 حالة البث: يسحب من قناة علوش مباشرة
     </div>
 
-    <button class="btn-refresh" onclick="location.reload()">🔄 تحديث البث</button>
+    <button class="btn-refresh" onclick="location.reload()">🔄 تحديث الصفحة</button>
 
-    <p style="margin-top: 30px; color: #888;">تصميم مملكة علوش - 2026</p>
+    <p style="margin-top: 30px; color: #888;">تم التصميم بواسطة AI لمملكة علوش</p>
 </body>
 </html>
