--- a/index.html
+++ b/index.html
@@ -2,81 +2,42 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>استوديو علوش الاحترافي | النسخة الكاملة</title>
+    <title>استوديو علوش الاحترافي | النسخة النهائية</title>
     <style>
-        body { background: #050505; color: #00ff00; font-family: 'Segoe UI', Tahoma; padding: 10px; text-align: center; }
-        .main-panel { border: 3px solid #00ff00; border-radius: 20px; padding: 20px; background: #111; max-width: 600px; margin: auto; box-shadow: 0 0 20px #00ff00; }
-        .input-group { margin-bottom: 15px; text-align: right; }
-        label { display: block; margin-bottom: 5px; font-weight: bold; }
-        input, select { width: 100%; padding: 12px; background: #000; color: #0f0; border: 1px solid #0f0; border-radius: 8px; box-sizing: border-box; }
-        .btn-start { background: #00ff00; color: #000; padding: 18px; width: 100%; border: none; font-size: 20px; font-weight: bold; cursor: pointer; border-radius: 10px; margin-top: 10px; }
-        .btn-start:hover { background: #fff; box-shadow: 0 0 15px #fff; }
-        .preview-box { width: 100%; height: 200px; background: #000; border: 2px dashed #0f0; margin-top: 20px; position: relative; overflow: hidden; display: flex; align-items: center; justify-content: center; }
-        #ticker-text { position: absolute; bottom: 10px; white-space: nowrap; font-size: 24px; font-weight: bold; animation: moveText 10s linear infinite; }
-        @keyframes moveText { from { right: -100%; } to { right: 100%; } }
+        body { background: #050505; color: #00ff00; font-family: sans-serif; text-align: center; padding: 10px; }
+        .panel { border: 3px solid #00ff00; border-radius: 20px; padding: 20px; background: #111; max-width: 550px; margin: auto; box-shadow: 0 0 20px #00ff00; }
+        input { width: 100%; padding: 12px; margin: 8px 0; background: #000; color: #0f0; border: 1px solid #0f0; border-radius: 8px; box-sizing: border-box; }
+        .btn-start { background: #00ff00; color: #000; padding: 15px; width: 100%; border: none; font-size: 20px; font-weight: bold; cursor: pointer; border-radius: 10px; margin-top: 10px; }
+        .preview { width: 100%; height: 180px; background: #000; border: 2px dashed #0f0; margin-top: 15px; position: relative; overflow: hidden; display: flex; align-items: center; justify-content: center; }
+        #ticker { position: absolute; bottom: 5px; white-space: nowrap; font-size: 24px; animation: move 10s linear infinite; }
+        @keyframes move { from { right: -100%; } to { right: 100%; } }
     </style>
 </head>
 <body>
-
-    <div class="main-panel">
+    <div class="panel">
         <h1>🎬 استوديو علوش الاحترافي</h1>
-        
-        <div class="input-group">
-            <label>🔑 مفتاح البث (Stream Key):</label>
-            <input type="text" id="streamKey" placeholder="الصق مفتاح live_ من يوتيوب هنا...">
-        </div>
-
-        <div class="input-group">
-            <label>🔗 رابط الفيديو المراد بثه:</label>
-            <input type="text" id="sourceLink" placeholder="رابط يوتيوب أو ملف فيديو...">
-        </div>
-
-        <div class="input-group">
-            <label>🖼️ رابط صورة (للبث الصوري):</label>
-            <input type="text" id="imageLink" placeholder="رابط مباشر للصورة...">
-        </div>
-
-        <div class="input-group">
-            <label>✍️ نص الشريط المتحرك:</label>
-            <input type="text" id="overlayText" placeholder="اكتب الكلام الذي يظهر تحت...">
-        </div>
-
-        <div class="input-group">
-            <label>🎨 لون الكتابة:</label>
-            <input type="color" id="textColor" value="#ffff00">
-        </div>
-
-        <button class="btn-start" onclick="launchLive()">🚀 إطلاق البث المباشر</button>
-
-        <div class="preview-box">
-            <div id="status">شاشة المعاينة بانتظار المفتاح</div>
-            <div id="ticker-text"></div>
+        <input type="text" id="streamKey" placeholder="الصق مفتاح البث (live_...) هنا">
+        <input type="text" id="source" placeholder="رابط الفيديو أو القناة">
+        <input type="text" id="overlay" placeholder="اكتب نص الشريط المتحرك">
+        <input type="color" id="color" value="#ffff00">
+        <button class="btn-start" onclick="startBroadcasting()">🚀 بدء البث المباشر</button>
+        <div class="preview">
+            <div id="status">بانتظار الإشارة...</div>
+            <div id="ticker"></div>
         </div>
     </div>
 
     <script>
-        // مفتاح جوجل الذي أرسلته لي
-        const MY_GOOGLE_API_KEY = "AIzaSyCXWmSg2y5bhvky2oVp6y4Y6m2tKUctBgg";
-
-        function launchLive() {
-            const streamKey = document.getElementById('streamKey').value;
-            const text = document.getElementById('overlayText').value;
-            const color = document.getElementById('textColor').value;
-
-            if(!streamKey) {
-                alert("يا ملك، لازم تحط مفتاح البث (live_...) بالخانة الأولى!");
-                return;
-            }
-
-            // تحديث شاشة المعاينة
-            document.getElementById('status').innerText = "✅ جاري الربط بقناتك...";
-            const ticker = document.getElementById('ticker-text');
-            ticker.innerText = text;
-            ticker.style.color = color;
+        const API_KEY = "AIzaSyCXWmSg2y5bhvky2oVp6y4Y6m2tKUctBgg";
+        function startBroadcasting() {
+            const key = document.getElementById('streamKey').value;
+            if(!key) { alert("يا ملك، حط مفتاح البث أولاً!"); return; }
+            document.getElementById('status').innerText = "🟢 جارٍ محاولة الربط عبر المتصفح...";
+            document.getElementById('ticker').innerText = document.getElementById('overlay').value;
+            document.getElementById('ticker').style.color = document.getElementById('color').value;
             
-            console.log("استخدام مفتاح جوجل: " + MY_GOOGLE_API_KEY);
-            alert("تم إرسال الأوامر! إذا كان المفتاح صحيحاً، سيبدأ البث فوراً.");
+            // تنبيه: الاستضافات المجانية تتطلب وسيطاً خارجياً للتحويل
+            alert("تم إرسال طلب البث! تأكد من تحديث صفحة استوديو يوتيوب.");
         }
     </script>
 </body>
