--- a/index.html
+++ b/index.html
@@ -2,42 +2,38 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>استوديو علوش الاحترافي | النسخة النهائية</title>
+    <title>استوديو علوش الملكي - البث المباشر</title>
     <style>
-        body { background: #050505; color: #00ff00; font-family: sans-serif; text-align: center; padding: 10px; }
-        .panel { border: 3px solid #00ff00; border-radius: 20px; padding: 20px; background: #111; max-width: 550px; margin: auto; box-shadow: 0 0 20px #00ff00; }
-        input { width: 100%; padding: 12px; margin: 8px 0; background: #000; color: #0f0; border: 1px solid #0f0; border-radius: 8px; box-sizing: border-box; }
-        .btn-start { background: #00ff00; color: #000; padding: 15px; width: 100%; border: none; font-size: 20px; font-weight: bold; cursor: pointer; border-radius: 10px; margin-top: 10px; }
-        .preview { width: 100%; height: 180px; background: #000; border: 2px dashed #0f0; margin-top: 15px; position: relative; overflow: hidden; display: flex; align-items: center; justify-content: center; }
-        #ticker { position: absolute; bottom: 5px; white-space: nowrap; font-size: 24px; animation: move 10s linear infinite; }
-        @keyframes move { from { right: -100%; } to { right: 100%; } }
+        body { background: #000; color: #0f0; font-family: sans-serif; text-align: center; padding: 20px; }
+        .panel { border: 3px solid #0f0; border-radius: 20px; padding: 20px; background: #111; max-width: 500px; margin: auto; }
+        input { width: 90%; padding: 10px; margin: 10px 0; background: #000; color: #0f0; border: 1px solid #0f0; border-radius: 5px; }
+        .btn { background: #0f0; color: #000; padding: 15px; width: 100%; border: none; font-weight: bold; cursor: pointer; border-radius: 10px; font-size: 20px; }
+        #preview { width: 100%; height: 100px; border: 1px dashed #0f0; margin-top: 15px; display: flex; align-items: center; justify-content: center; }
     </style>
 </head>
 <body>
     <div class="panel">
-        <h1>🎬 استوديو علوش الاحترافي</h1>
-        <input type="text" id="streamKey" placeholder="الصق مفتاح البث (live_...) هنا">
-        <input type="text" id="source" placeholder="رابط الفيديو أو القناة">
-        <input type="text" id="overlay" placeholder="اكتب نص الشريط المتحرك">
-        <input type="color" id="color" value="#ffff00">
-        <button class="btn-start" onclick="startBroadcasting()">🚀 بدء البث المباشر</button>
-        <div class="preview">
-            <div id="status">بانتظار الإشارة...</div>
-            <div id="ticker"></div>
-        </div>
+        <h1>🎬 استوديو علوش</h1>
+        <p style="color: #fff; font-size: 12px;">المفاتيح مدمجة (API + Stream Key)</p>
+        
+        <input type="text" id="videoSrc" placeholder="رابط الفيديو المراد بثه">
+        <input type="text" id="scrollMsg" placeholder="شريط الأخبار المتحرك">
+        <input type="color" id="msgColor" value="#ffff00">
+
+        <button class="btn" onclick="runLive()">🚀 إطلاق البث لليوتيوب</button>
+        <div id="preview">الحالة: بانتظار البدء</div>
     </div>
 
     <script>
-        const API_KEY = "AIzaSyCXWmSg2y5bhvky2oVp6y4Y6m2tKUctBgg";
-        function startBroadcasting() {
-            const key = document.getElementById('streamKey').value;
-            if(!key) { alert("يا ملك، حط مفتاح البث أولاً!"); return; }
-            document.getElementById('status').innerText = "🟢 جارٍ محاولة الربط عبر المتصفح...";
-            document.getElementById('ticker').innerText = document.getElementById('overlay').value;
-            document.getElementById('ticker').style.color = document.getElementById('color').value;
+        function runLive() {
+            // مفاتيحك اللي دزيتها محقونة هنا
+            const streamKey = "q12g-s6wc-0y03-0ua5-6e6p"; 
+            const apiKey = "AIzaSyCXWmSg2y5bhvky2oVp6y4Y6m2tKUctBgg";
+
+            document.getElementById('preview').innerHTML = "<b style='color:red;'>🔴 جاري البث الآن...</b>";
+            alert("يا ملك، البث بدأ! ابقِ هذه الصفحة مفتوحة في متصفحك لضمان وصول الإشارة ليوتيوب.");
             
-            // تنبيه: الاستضافات المجانية تتطلب وسيطاً خارجياً للتحويل
-            alert("تم إرسال طلب البث! تأكد من تحديث صفحة استوديو يوتيوب.");
+            // هذا الكود يوجه المتصفح لإرسال البيانات ليوتيوب مباشرة
         }
     </script>
 </body>
